[gd_scene load_steps=13 format=2]

[ext_resource path="res://Art/frames/tiny_zombie_idle_anim_f0.png" type="Texture" id=1]
[ext_resource path="res://Art/frames/tiny_zombie_idle_anim_f1.png" type="Texture" id=2]
[ext_resource path="res://Art/frames/tiny_zombie_idle_anim_f3.png" type="Texture" id=3]
[ext_resource path="res://Art/frames/tiny_zombie_idle_anim_f2.png" type="Texture" id=4]
[ext_resource path="res://Art/frames/tiny_zombie_run_anim_f1.png" type="Texture" id=5]
[ext_resource path="res://Art/frames/tiny_zombie_run_anim_f0.png" type="Texture" id=6]
[ext_resource path="res://Art/frames/tiny_zombie_run_anim_f3.png" type="Texture" id=7]
[ext_resource path="res://Art/frames/tiny_zombie_run_anim_f2.png" type="Texture" id=8]
[ext_resource path="res://Mobs/small_blob.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "IDLE",
"speed": 7.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "WALK",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.5, 5 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 6.35
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 51.49
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 51.49
radial_accel = 91.09
color = Color( 0.917647, 0.858824, 0.662745, 1 )

[node name="small_blob" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "IDLE"
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 3 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 200
lifetime = 0.8
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 3 )

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="PatrolTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
[connection signal="timeout" from="PatrolTimer" to="." method="_on_PatrolTimer_timeout"]
